force-app/main/default/objects/Multiple_requests_info__c/Multiple_requests_info__c.object-meta.xml
<CustomObject>
    <description>Used in the new hire process - associates a Service Request template to a selection on the new hire request form</description>
    <label>Multiple requests info</label>
    <nameField>
        <label>Mapping Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Multiple requests info</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>