force-app/main/default/objects/Multiple_requests_info__c/fields/Fulfillment_Input__c.field-meta.xml
<CustomField>
    <fullName>Fulfillment_Input__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Fulfillment Input</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Request_Definition__c</field>
            <operation>equals</operation>
            <valueField>BMCServiceDesk__SRM_FulfillmentInputs__c.BMCServiceDesk__FKRequestDefinition__c</valueField>
        </filterItems>
        <filterItems>
            <field>BMCServiceDesk__SRM_FulfillmentInputs__c.BMCServiceDesk__ResponseType__c</field>
            <operation>equals</operation>
            <value>Check box, Picklist, Text Field, Text Area</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>BMCServiceDesk__SRM_FulfillmentInputs__c</referenceTo>
    <relationshipLabel>Multiple requests info</relationshipLabel>
    <relationshipName>Multiple_requests_info</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>