force-app/main/default/objects/Multiple_requests_info__c/fields/Request_Definition__c.field-meta.xml
<CustomField>
    <fullName>Request_Definition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Request Definition</label>
    <referenceTo>BMCServiceDesk__SRM_RequestDefinition__c</referenceTo>
    <relationshipLabel>Multiple requests info</relationshipLabel>
    <relationshipName>Multiple_requests_info</relationshipName>
    <type>Lookup</type>
</CustomField>