force-app/main/default/objects/Multiple_requests_info__c/fields/Request_Types__c.field-meta.xml
<CustomField>
    <fullName>Request_Types__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Request Types</label>
    <referenceTo>Request_Type__c</referenceTo>
    <relationshipLabel>Multiple requests info</relationshipLabel>
    <relationshipName>Multiple_requests_info</relationshipName>
    <type>Lookup</type>
</CustomField>