force-app/main/default/objects/Multiple_requests_info__c/fields/Template__c.field-meta.xml
<CustomField>
    <fullName>Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Template</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>BMCServiceDesk__SYSTemplate__c.BMCServiceDesk__templateFor__c</field>
            <operation>equals</operation>
            <value>Incident</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>BMCServiceDesk__SYSTemplate__c</referenceTo>
    <relationshipLabel>Multiple requests info</relationshipLabel>
    <relationshipName>Multiple_requests_info</relationshipName>
    <type>Lookup</type>
</CustomField>