force-app/main/default/objects/Multiple_requests_info__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Fulfillment_Input__c</columns>
    <columns>Template__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Request_Type__c</columns>
    <columns>Request_Definition__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>notContain</operation>
        <value>x</value>
    </filters>
    <label>All</label>
    <language>en_US</language>
</ListView>