force-app/main/default/objects/Multiple_requests_info__c/listViews/HRC_CMS_Multiple_requests_info.listView-meta.xml
<ListView>
    <fullName>HRC_CMS_Multiple_requests_info</fullName>
    <filterScope>Queue</filterScope>
    <label>HRC-CMS</label>
    <queue>HRC_CMS</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>