force-app/main/default/objects/Multiple_requests_info__c/listViews/HRC_DBA_Multiple_requests_info.listView-meta.xml
<ListView>
    <fullName>HRC_DBA_Multiple_requests_info</fullName>
    <filterScope>Queue</filterScope>
    <label>HRC-DBA</label>
    <queue>HRC_DBA</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>