force-app/main/default/objects/Multiple_requests_info__c/listViews/HRC_GROUPWARE_Multiple_requests_info.listView-meta.xml
<ListView>
    <fullName>HRC_GROUPWARE_Multiple_requests_info</fullName>
    <filterScope>Queue</filterScope>
    <label>HRC-GROUPWARE</label>
    <queue>HRC_GROUPWARE</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>