force-app/main/default/objects/Multiple_requests_info__c/listViews/HRC_HR_EMPUPDATE_Multiple_requests_info.listView-meta.xml
<ListView>
    <fullName>HRC_HR_EMPUPDATE_Multiple_requests_info</fullName>
    <filterScope>Queue</filterScope>
    <label>HRC-HR-EMPUPDATE</label>
    <queue>HRC_HR_EMPUPDATE</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>