force-app/main/default/objects/Multiple_requests_info__c/listViews/HRC_IMAGENOW_SYSADMN_Multiple_requests_info.listView-meta.xml
<ListView>
    <fullName>HRC_IMAGENOW_SYSADMN_Multiple_requests_info</fullName>
    <filterScope>Queue</filterScope>
    <label>HRC-IMAGENOW-SYSADMN</label>
    <queue>HRC_IMAGENOW_SYSADMN</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>