force-app/main/default/objects/Multiple_requests_info__c/listViews/HRC_INTL_SERVICEAPPS_Multiple_requests_info.listView-meta.xml
<ListView>
    <fullName>HRC_INTL_SERVICEAPPS_Multiple_requests_info</fullName>
    <filterScope>Queue</filterScope>
    <label>xHRC-INTL-SERVICEAPPS</label>
    <queue>xHRC_INTL_SERVICEAPPS</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>