force-app/main/default/objects/Multiple_requests_info__c/listViews/HRC_JDE_SALESERVICE_Multiple_requests_info.listView-meta.xml
<ListView>
    <fullName>HRC_JDE_SALESERVICE_Multiple_requests_info</fullName>
    <filterScope>Queue</filterScope>
    <label>HRC-JDE-SALESERVICE</label>
    <queue>HRC_JDE_SALESERVICE</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>