force-app/main/default/objects/Multiple_requests_info__c/listViews/HRC_LMS_APP_Multiple_requests_info.listView-meta.xml
<ListView>
    <fullName>HRC_LMS_APP_Multiple_requests_info</fullName>
    <filterScope>Queue</filterScope>
    <label>HRC-LMS-APP</label>
    <queue>HRC_LMS_APP</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>