force-app/main/default/objects/Multiple_requests_info__c/listViews/HRC_MORTARA_IT_Multiple_requests_info.listView-meta.xml
<ListView>
    <fullName>HRC_MORTARA_IT_Multiple_requests_info</fullName>
    <filterScope>Queue</filterScope>
    <label>HRC-MORTARA-IT</label>
    <queue>HRC_MORTARA_IT</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>