force-app/main/default/objects/Multiple_requests_info__c/listViews/HRC_SERV_SUPPORT_Multiple_requests_info.listView-meta.xml
<ListView>
    <fullName>HRC_SERV_SUPPORT_Multiple_requests_info</fullName>
    <filterScope>Queue</filterScope>
    <label>HRC-DC-INFR</label>
    <queue>HRC_DC_INFR</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>