force-app/main/default/objects/Multiple_requests_info__c/listViews/HRC_TELETRACK_ADMIN_Multiple_requests_info.listView-meta.xml
<ListView>
    <fullName>HRC_TELETRACK_ADMIN_Multiple_requests_info</fullName>
    <filterScope>Queue</filterScope>
    <label>HRC-TELETRACK-ADMIN</label>
    <queue>HRC_TELETRACK_ADMIN</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>